--- a/index.html
+++ b/index.html
@@ -6,25 +6,28 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/darkly/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
-  <a class="btn btn-primary" href="https://dorian-ichpbusiness.replit.app/"> Homepage</a>
-
+</head>
 <body>
+  <a class="homepage-btn" href="https://dorian-ichpbusiness.replit.app/"> Homepage</a>
     <div class="hero-glow"></div>
     <div class="hero-title">Dorian</div>
-  <canvas id="dorian-canvas" width="1000" height="1000"></canvas>
-  <div id="ui" class="card bg-dark text-light mt-4 border-0 shadow-lg" style="max-width:1000px;">
+    <div id="canvas-container" style="display:inline-block; position:relative;">
+  <canvas id="dorian-canvas" width="1000" height="1000" style="width:1000px; height:1000px;"></canvas>
+  <button id="resize-btn" style="position:absolute; bottom:10px; right:10px; z-index:2;">Resize</button>
+</div>
+  <div id="ui" style="max-width:1000px;">
     <div class="card-body p-3">
       <div class="row mb-2">
         <div class="col-auto ms-auto"><button id="hide-ui-btn" title="Hide UI" class="btn btn-light btn-sm">👁️</button></div>
       </div>
-      <div class="row text-center mb-2">
-        <div class="col"><div id="tick">Tick: 0</div></div>
-        <div class="col"><div id="dominant">Current Emotional State: None</div></div>
-        <div class="col"><div id="diversity">Diversity: 0</div></div>
-        <div class="col"><div id="entropy">Entropy: 0.00</div></div>
-        <div class="col"><div id="alive">Alive: 0</div></div>
-        <div class="col"><div id="growth">Growth: 0</div></div>
-      </div>
+      <div class="row text-center mb-2 ui-stats">
+  <div class="col"><div id="tick">Tick: 0</div></div>
+  <div class="col"><div id="dominant">Current Emotional State: None</div></div>
+  <div class="col"><div id="diversity">Diversity: 0</div></div>
+  <div class="col"><div id="entropy">Entropy: 0.00</div></div>
+  <div class="col"><div id="alive">Alive: 0</div></div>
+  <div class="col"><div id="growth">Growth: 0</div></div>
+</div>
       <form class="row align-items-center mb-3 g-2" id="speed-control">
         <div class="col-auto">
           <label for="speed-slider" class="form-label mb-0">Speed:</label>
@@ -53,5 +56,71 @@
     </div>
   </div>
   <script type="module" src="dorian.js"></script>
+
+
+  <script>
+const canvas = document.getElementById('dorian-canvas');
+const container = document.getElementById('canvas-container');
+const resizeBtn = document.getElementById('resize-btn');
+
+let small = false;
+resizeBtn.addEventListener('click', () => {
+  small = !small;
+  if (small) {
+    canvas.style.width = '400px';
+    canvas.style.height = '400px';
+    container.style.width = '400px';
+    container.style.height = '400px';
+    resizeBtn.textContent = 'Enlarge';
+  } else {
+    canvas.style.width = '1000px';
+    canvas.style.height = '1000px';
+    container.style.width = '1000px';
+    container.style.height = '1000px';
+    resizeBtn.textContent = 'Shrink';
+  }
+});
+
+// Optional: Make the container draggable
+container.style.cursor = 'move';
+let isDragging = false, startX, startY, origX, origY;
+container.addEventListener('mousedown', (e) => {
+  if (e.target === resizeBtn) return; // Don't drag when clicking the button
+  isDragging = true;
+  startX = e.clientX;
+  startY = e.clientY;
+  origX = container.offsetLeft;
+  origY = container.offsetTop;
+});
+document.addEventListener('mousemove', (e) => {
+  if (isDragging) {
+    container.style.position = 'absolute';
+    container.style.left = origX + (e.clientX - startX) + 'px';
+    container.style.top = origY + (e.clientY - startY) + 'px';
+  }
+});
+document.addEventListener('mouseup', () => isDragging = false);
+
+const ui = document.getElementById('ui');
+ui.style.cursor = 'move';
+let isUIDragging = false, uiStartX, uiStartY, uiOrigX, uiOrigY;
+ui.addEventListener('mousedown', (e) => {
+  // Only drag if not clicking a button or input
+  if (e.target.tagName === 'BUTTON' || e.target.tagName === 'INPUT' || e.target.tagName === 'LABEL') return;
+  isUIDragging = true;
+  uiStartX = e.clientX;
+  uiStartY = e.clientY;
+  uiOrigX = ui.offsetLeft;
+  uiOrigY = ui.offsetTop;
+});
+document.addEventListener('mousemove', (e) => {
+  if (isUIDragging) {
+    ui.style.left = uiOrigX + (e.clientX - uiStartX) + 'px';
+    ui.style.top = uiOrigY + (e.clientY - uiStartY) + 'px';
+    ui.style.transform = 'none';
+  }
+});
+document.addEventListener('mouseup', () => isUIDragging = false);
+</script>
 </body>
 </html>
