--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <a class="homepage-btn" href="https://dorian-ichpbusiness.replit.app/"> Homepage</a>
+  <button class="custom-btn homepage-btn" onclick="window.location.href='https://dorian-ichpbusiness.replit.app/'">Homepage</button>
     <div class="hero-glow"></div>
     <div class="hero-title">Dorian</div>
     <div id="canvas-container" style="display:inline-block; position:relative;">
@@ -18,37 +18,94 @@
   <div id="ui" style="max-width:1000px;">
     <div class="card-body p-3">
       <div class="row mb-2">
-        <div class="col-auto ms-auto"><button id="hide-ui-btn" title="Hide UI" class="btn btn-light btn-sm">👁️</button></div>
+        <div class="col-auto ms-auto">
+            <button id="hide-ui-btn" title="Hide UI" class="hide-btn">👁️</button>
+        </div>
+        <script>
+          document.addEventListener('DOMContentLoaded', () => {
+            const hideBtn = document.getElementById('hide-ui-btn');
+            const ui = document.getElementById('ui');
+            hideBtn.addEventListener('click', () => {
+              if (ui.style.display !== 'none') {
+          ui.style.display = 'none';
+          hideBtn.textContent = '👁';
+          hideBtn.title = 'Show UI';
+          hideBtn.style.position = 'fixed';
+          hideBtn.style.top = '10px';
+          hideBtn.style.right = '10px';
+          document.body.appendChild(hideBtn);
+              } else {
+          ui.style.display = '';
+          hideBtn.textContent = '👁️';
+          hideBtn.title = 'Hide UI';
+          // Move button back to UI
+          const row = ui.querySelector('.row.mb-2');
+          if (row) row.appendChild(hideBtn);
+          hideBtn.style.position = '';
+          hideBtn.style.top = '';
+          hideBtn.style.right = '';
+              }
+            });
+          });
+        </script>
       </div>
       <div class="row text-center mb-2 ui-stats">
-  <div class="col"><div id="tick">Tick: 0</div></div>
-  <div class="col"><div id="dominant">Current Emotional State: None</div></div>
-  <div class="col"><div id="diversity">Diversity: 0</div></div>
-  <div class="col"><div id="entropy">Entropy: 0.00</div></div>
-  <div class="col"><div id="alive">Alive: 0</div></div>
-  <div class="col"><div id="growth">Growth: 0</div></div>
-</div>
+        <div class="col">
+          <div id="tick">
+        <span class="stat-title">Tick:</span>
+        <span class="stat-metric" id="tick-metric">0</span>
+          </div>
+        </div>
+        <div class="col">
+          <div id="dominant">
+        <span class="stat-title">Current Emotional State:</span>
+        <span class="stat-metric" id="dominant-metric">None</span>
+          </div>
+        </div>
+        <div class="col">
+          <div id="diversity">
+        <span class="stat-title">Diversity:</span>
+        <span class="stat-metric" id="diversity-metric">0</span>
+          </div>
+        </div>
+        <div class="col">
+          <div id="entropy">
+        <span class="stat-title">Entropy:</span>
+        <span class="stat-metric" id="entropy-metric">0.00</span>
+          </div>
+        </div>
+        <div class="col">
+          <div id="alive">
+        <span class="stat-title">Alive:</span>
+        <span class="stat-metric" id="alive-metric">0</span>
+          </div>
+        </div>
+        <div class="col">
+          <div id="growth">
+        <span class="stat-title">Growth:</span>
+        <span class="stat-metric" id="growth-metric">0</span>
+          </div>
+        </div>
+      </div>
       <form class="row align-items-center mb-3 g-2" id="speed-control">
-        <div class="col-auto">
-          <label for="speed-slider" class="form-label mb-0">Speed:</label>
-        </div>
-        <div class="col-auto">
-          <input type="range" id="speed-slider" min="1" max="10" value="1" class="form-range" style="width:90px;">
-        </div>
-        <div class="col-auto">
-          <span id="speed-value">1</span>x
-        </div>
-        <div class="col-auto">
-          <button id="pause-btn" type="button" class="btn btn-primary btn-sm ms-2">Pause</button>
-        </div>
-        <div class="col-auto">
-          <button id="reset-btn" type="button" class="btn btn-danger btn-sm ms-2">Restart</button>
-        </div>
-      </form>
+  <div class="col-auto">
+    <label for="speed-slider" class="form-label">Speed:</label>
+  </div>
+  <div class="col-auto d-flex align-items-center" style="gap: 8px;">
+    <input type="range" id="speed-slider" min="1" max="10" value="1" class="slider">
+    <span>x <span id="speed-value">1</span></span>
+  </div>
+  <div class="col-auto">
+    <button id="pause-btn" type="button" class="custom-btn">Pause</button>
+  </div>
+  <div class="col-auto">
+    <button id="reset-btn" type="button" class="custom-btn">Reset</button>
+  </div>
+</form>
       <div id="logic-toggles" class="row g-2 justify-content-center">
         <div class="col-auto">
           <div class="form-check form-switch">
-            <input class="form-check-input" type="checkbox" id="toggle-mutation" checked>
+              <input class="form-check-input" type="checkbox" id="toggle-mutation" checked>
             <label class="form-check-label" for="toggle-mutation">Mutation</label>
           </div>
         </div>
