--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <button class="custom-btn homepage-btn" onclick="window.location.href='https://dorian-ichpbusiness.replit.app/'">Homepage</button>
+  <button class="custom-btn homepage-btn" onclick="window.location.href='https://dorian-ichpbusiness.replit.app/'">Dorian</button>
     <div class="hero-glow"></div>
-    <div class="hero-title">Dorian</div>
     <div id="canvas-container" style="display:inline-block; position:relative;">
   <canvas id="dorian-canvas" width="1000" height="1000" style="width:1000px; height:1000px;"></canvas>
   <button id="resize-btn" style="position:absolute; bottom:10px; right:10px; z-index:2;">Resize</button>
