--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="hero-glow"></div>
     <div id="canvas-container" style="display:inline-block; position:relative;">
   <canvas id="dorian-canvas" width="1000" height="1000" style="width:1000px; height:1000px;"></canvas>
-  <button id="resize-btn" style="position:absolute; bottom:10px; right:10px; z-index:2;">Resize</button>
+  <!-- Resize button removed -->
 </div>
   <div id="ui" style="max-width:1000px;">
     <div class="card-body p-3">
@@ -86,56 +86,38 @@
           </div>
         </div>
       </div>
-      <form class="row align-items-center mb-3 g-2" id="speed-control">
-  <div class="col-auto">
-    <label for="speed-slider" class="form-label">Speed:</label>
-  </div>
-  <div class="col-auto d-flex align-items-center" style="gap: 8px;">
-    <input type="range" id="speed-slider" min="1" max="10" value="1" class="slider">
-    <span>x <span id="speed-value">1</span></span>
-  </div>
-  <div class="col-auto">
-    <button id="pause-btn" type="button" class="custom-btn">Pause</button>
-  </div>
-  <div class="col-auto">
-    <button id="reset-btn" type="button" class="custom-btn">Reset</button>
-  </div>
-</form>
-      <div id="logic-toggles" class="row g-2 justify-content-center">
+      <div id="logic-toggles" class="row g-2 justify-content-center mb-3">
         <div class="col-auto">
           <div class="form-check form-switch">
-              <input class="form-check-input" type="checkbox" id="toggle-mutation" checked>
-            <label class="form-check-label" for="toggle-mutation">Mutation</label>
+        <input class="form-check-input" type="checkbox" id="toggle-mutation" checked>
+        <label class="form-check-label" for="toggle-mutation">Mutation</label>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <script type="module" src="dorian.js"></script>
+      </div>
+      </div>
+      <form class="row align-items-center mb-3 g-2" id="speed-control" style="max-width:1000px;">
+        <div class="col-auto">
+          <label for="speed-slider" class="form-label">Speed:</label>
+        </div>
+        <div class="col-auto d-flex align-items-center" style="gap: 8px;">
+          <input type="range" id="speed-slider" min="1" max="10" value="1" class="slider">
+          <span>x <span id="speed-value">1</span></span>
+        </div>
+        <div class="col-auto">
+          <button id="pause-btn" type="button" class="custom-btn">Pause</button>
+        </div>
+        <div class="col-auto">
+          <button id="reset-btn" type="button" class="custom-btn">Reset</button>
+        </div>
+      </form>
+      <script type="module" src="dorian.js"></script>
 
 
   <script>
 const canvas = document.getElementById('dorian-canvas');
 const container = document.getElementById('canvas-container');
-const resizeBtn = document.getElementById('resize-btn');
 
-let small = false;
-resizeBtn.addEventListener('click', () => {
-  small = !small;
-  if (small) {
-    canvas.style.width = '400px';
-    canvas.style.height = '400px';
-    container.style.width = '400px';
-    container.style.height = '400px';
-    resizeBtn.textContent = 'Enlarge';
-  } else {
-    canvas.style.width = '1000px';
-    canvas.style.height = '1000px';
-    container.style.width = '1000px';
-    container.style.height = '1000px';
-    resizeBtn.textContent = 'Shrink';
-  }
-});
 
 
 const ui = document.getElementById('ui');
