Refine speed slider

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="speed-slider-wrapper">
             <label for="speed-slider">Speed:</label>
             
-            <input type="range" id="speed-slider" min="1" max="10" value="1" class="speed-slider">
+            <input type="range" id="speed-slider" min="1" max="5" value="1" step="1" class="speed-slider">
             <span>x <span id="speed-value">1</span></span>
           </div>
           <div class="ui-speed-btns">
