--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
     <div class="input-text-box">
-      <input type="text" placeholder="Ask Dorian something..." class="input-text" id="gpt-input"/>
+      <input type="text" placeholder="Ask anything" class="input-text" id="gpt-input"/>
       <form type="submit" onclick="sendToClaude()" class="btn-submit-right-column">Go</form>
   </div>
 
