feat: Add new features to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <div class="header">
-    <h2 class="heading-title">Dorian</h2>
+    <a href="https://dorianai.replit.app/" class="heading-title">Dorian</a>
         <p class="heading-subtitle">A project by DorianAI <a href="https://dorianai.replit.app/"></a></p>
 
     <div class="header-divider"></div>
