--- a/index.html
+++ b/index.html
@@ -5,16 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dorian</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/c0ffa5e1d4.js" crossorigin="anonymous"></script>
+
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet">
 </head>
   <script type="module" src="dorian.js"></script>
 
-<body>
+<body>      
+            <div id="menu-toggle" class="hamburger">&#9776</div>
+          
+            <nav id="dropdown" class="dropdown hidden">
+              <a href="#Home">Home</a>
+              <a href="#Features">Features</a>
+              <a href="#About">About</a>
+              <a href="#Socials">Socials</a>
+            </nav>
 
-  <div class="header">
+
+          <div class="header">
     <a href="https://dorianai.replit.app/" class="heading-title">Dorian</a>
         <p class="heading-subtitle">A project by DorianAI <a href="https://dorianai.replit.app/"></a></p>
-
     <div class="header-divider"></div>
   </div>
 
@@ -37,7 +47,7 @@
         </div>
         <div class="input-text-box">
           <input type="text" placeholder="Ask anything" class="input-text" id="gpt-input" />
-          <button type="button" onclick="sendToClaude()" class="btn-go-right-column">Go</button>
+          <button type="button" class="btn-go-right-column">Go</button>
         </div>
     </div>
     
