Fix form submission and enter key

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         <div class="gpt-output-container">
           <p id="gpt-output" class="gpt-answer-text-box"></p>
         </div>
-        <div class="input-text-box">
+        <form class="input-text-box" id="gpt-form">
           <input type="text" placeholder="Ask anything" class="input-text" id="gpt-input"/>
-          <button type="button" class="btn-go-right-column">Go</button>
-        </div>
+          <button type="submit" class="btn-go-right-column">Go</button>
+        </form>
     </div>
     
     <div class="center-area-wrapper">
