--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dorian</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.png">
   <script src="https://kit.fontawesome.com/c0ffa5e1d4.js" crossorigin="anonymous"></script>
 
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet">
@@ -24,7 +25,7 @@
 
           <div class="header">
             <video autoplay muted loop playsinline class="header-video">
-              <source src="./media/rpd.webm" type="video/webm"/>
+              <source src="rpd.webm" type="video/webm"/>
               Your browser does not support the video tag.     
               </video>
               <a href="https://dorianai.replit.app/" class="heading-title">Dorian</a>
