--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="favicon.png">
   <script src="https://kit.fontawesome.com/c0ffa5e1d4.js" crossorigin="anonymous"></script>
-
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet">
 </head>
 <script type="module" src="dorian.js"></script>
@@ -113,7 +112,8 @@
     </video>
     <h3 class="thought-log-title">Dorian's Recent Thoughts</h3>
     <div class="thought-log-parent">
-      <pre id="thought-log-section" class="thought-log">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere quia, perspiciatis repellendus harum doloribus placeat pariatur reprehenderit recusandae! Perspiciatis est rem, quos numquam similique fuga eligendi et eveniet alias assumenda!</pre>
+      <pre id="thought-log-section"
+        class="thought-log">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere quia, perspiciatis repellendus harum doloribus placeat pariatur reprehenderit recusandae! Perspiciatis est rem, quos numquam similique fuga eligendi et eveniet alias assumenda!</pre>
     </div>
   </section>
 
