fix: polish UI animations

--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
       <video autoplay muted loop playsinline class="thought-log-video">
         <source src="cube.webm" type="video/webm" />
       </video>
-      <h3 class="thought-log-title">Dorian's Recent Thoughts</h3>
+      <h2 class="thought-log-title">Dorian's Recent Thoughts</h3>
+      <h3 class="thought-log-subtitle">Each tick, Dorian reflects on its state. These are its most recent thoughts.</h3>
+"     
 
     </div>
   </section>
@@ -136,7 +138,7 @@
     <div class="thought-log-parent">
 
       <pre id="thought-log-section"
-        class="thought-log">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta nemo quas, optio eos incidunt libero voluptas quo fugiat, explicabo perspiciatis rem ex neque laudantium accusantium veritatis! Dignissimos perspiciatis accusantium incidunt?</pre>
+        class="thought-log"></pre>
     </div>
   </section>
 
