clean: mobile ui components

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <source src="cube.webm" type="video/webm" />
       </video>
       <h2 class="thought-log-title">Dorian's Recent Thoughts</h2>
-      <h3 class="thought-log-subtitle">Each tick, Dorian reflects on its state. These are its most recent thoughts.</h3>
+      <h3 class="thought-log-subtitle">Each tick, Dorian reflects on its state. These are the most recent thoughts.</h3>
     </div>
   </section>
 
@@ -168,4 +168,9 @@
   </section>
 
 </body>
+<footer class="footer">
+    <a href="https://dorianai.replit.app/" class="heading-subtitle"</a>
+    <p class="heading-subtitle">A project by DorianAI</p>
+    <p class="footer-text">All rights reserved</p>
+  </div>
 </html>
