--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
   <script src="https://kit.fontawesome.com/c0ffa5e1d4.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet" />
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Space+Grotesk:wght@300..700&display=swap"
+    rel="stylesheet">
   <script type="module" src="dorian.js"></script>
 </head>
 
@@ -30,10 +34,10 @@
       </div>
     </div>
     <nav class="navigation-bar" id="navigation-bar">
-        <button class="navigation-button">Home</button>
-        <button class="navigation-button">Features</button>
-        <button class="navigation-button">About</button>
-        <button class="navigation-button">Socials</button>
+      <button class="navigation-button">Home</button>
+      <button class="navigation-button">Features</button>
+      <button class="navigation-button">About</button>
+      <button class="navigation-button">Socials</button>
     </nav>
   </header>
 
@@ -103,7 +107,8 @@
 
         <div class="sagA-sliders-labels">
           <label class="reproduction-label">Reproduction Rate:</label>
-          <input type="range" id="reproduction-rate-slider" class="speed-slider" min="0.1" max="1.0" value="0.5" step="0.1" />
+          <input type="range" id="reproduction-rate-slider" class="speed-slider" min="0.1" max="1.0" value="0.5"
+            step="0.1" />
         </div>
 
         <div class="under-reproduction-divider"></div>
@@ -130,7 +135,11 @@
           <input type="checkbox" id="mutation-checkbox" />
           <div class="slider">
             <div class="slider-btn">
-              <div class="light"></div><div class="texture"></div><div class="texture"></div><div class="texture"></div><div class="light"></div>
+              <div class="light"></div>
+              <div class="texture"></div>
+              <div class="texture"></div>
+              <div class="texture"></div>
+              <div class="light"></div>
             </div>
           </div>
         </label>
@@ -139,7 +148,11 @@
           <input type="checkbox" id="ambience-checkbox" />
           <div class="slider">
             <div class="slider-btn">
-              <div class="light"></div><div class="texture"></div><div class="texture"></div><div class="texture"></div><div class="light"></div>
+              <div class="light"></div>
+              <div class="texture"></div>
+              <div class="texture"></div>
+              <div class="texture"></div>
+              <div class="light"></div>
             </div>
           </div>
         </label>
@@ -169,8 +182,9 @@
 
 </body>
 <footer class="footer">
-    <a href="https://dorianai.replit.app/" class="heading-subtitle"</a>
+  <a href="https://dorianai.replit.app/" class="heading-subtitle" </a>
     <p class="heading-subtitle">A project by DorianAI</p>
     <p class="footer-text">All rights reserved</p>
-  </div>
+    </div>
+
 </html>
