fix: UI improvements and polishes to UX.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="main-canvas">
         <canvas id="dorian-canvas" width="1000" height="1000"></canvas>
         <div class="canvas-overlay">
-          <button id="reveal-thoughts" class="custom-btn pulse">View Dorian's Thoughts</button>
+          <button id="reveal-thoughts" class="custom-btn-dorian">View Dorian's Thoughts</button>
         </div>
       </div>
     </div>
@@ -157,7 +157,7 @@
           </div>
         </label>
 
-        <audio id="ambience-audio" src="chatter.wav" type="audio/wav"></audio>
+        <audio id="ambience-audio" src="vibes.wav" type="audio/wav"></audio>
       </div>
     </div>
   </main>
