fix: Canvas sizing bug causing improper scaling depending on device

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <!-- Canvas Area -->
     <div class="center-area-wrapper">
       <div class="main-canvas">
-        <canvas id="dorian-canvas" width="1000" height="1000"></canvas>
+        <canvas id="dorian-canvas"></canvas>
         <div class="canvas-overlay">
           <button id="reveal-thoughts" class="custom-btn-dorian">View Dorian's Thoughts</button>
         </div>
