--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
 
 </body>
 <footer class="footer">
-  <a href="https://dorianai.replit.app/" class="heading-subtitle" </a>
-    <p class="heading-subtitle">A project by DorianAI</p>
-    <p class="footer-text">All rights reserved</p>
-    </div>
+  <a href="https://dorianai.replit.app/" class="heading-subtitle">Visit DorianAI</a>
+  <p class="heading-subtitle">A project by DorianAI</p>
+  <p class="footer-text">All rights reserved</p>
+</footer>
 
 </html>
