--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@
 
       <!-- GPT Input -->
       <div class="input-text-box">
-        <input type="text" id="gpt-input" class="input-text" placeholder="Ask anything" />
-        <button type="button" class="btn-go-right-column">Go</button>
+        <input type="text" id="gpt-input" class="input-text" placeholder="Awaiting Instructions..." />
+        <button type="button" class="btn-go-right-column" title="Run Command"><i class="fa fa-arrow-right" aria-hidden="true"></i>
+
+</button>
       </div>
     </div>
 
@@ -179,7 +181,6 @@
 </body>
 <footer class="footer">
   <a href="https://dorianai.replit.app/" class="heading-subtitle">Visit DorianAI</a>
-  <p class="heading-subtitle">A project by DorianAI</p>
   <p class="footer-text">All rights reserved</p>
 </footer>
 
