clean: finalizing UI polishes on mobile for stage 1

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <nav class="navigation-bar" id="navigation-bar">
       <button class="navigation-button">Home</button>
-      <button class="navigation-button">Features</button>
+      <button class="navigation-button">Chat</button>
       <button class="navigation-button">About</button>
       <button class="navigation-button">Socials</button>
     </nav>
@@ -72,7 +72,7 @@
 
       <!-- GPT Input -->
       <div class="input-text-box">
-        <input type="text" id="gpt-input" class="input-text" placeholder="Awaiting Instructions..." />
+        <input type="text" id="gpt-input" class="input-text" placeholder="Ask a question" />
         <button type="button" class="btn-go-right-column" title="Run Command"><i class="fa fa-arrow-right" aria-hidden="true"></i>
 
 </button>
