--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
   <link rel="icon" href="favicon.png" />
   <script src="https://kit.fontawesome.com/c0ffa5e1d4.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Rajdhani:wght@300;400;500;600;700&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Rajdhani:wght@300;400;500;600;700&family=Space+Grotesk:wght@300..700&display=swap"
+    rel="stylesheet">
   <script type="module" src="dorian.js"></script>
 </head>
 
 <body>
-
+ 
   <!-- Navigation Header -->
   <header class="nav-header">
     <div class="nav-left">
@@ -73,20 +75,18 @@
       <!-- GPT Input -->
       <div class="input-text-box">
         <input type="text" id="gpt-input" class="input-text" placeholder="Ask a question" />
-        <button type="button" class="btn-go-right-column" title="Run Command"><i class="fa fa-arrow-right" aria-hidden="true"></i>
-
-</button>
+        <button type="button" class="btn-go-right-column" title="Run Command"><i class="fa fa-arrow-right"
+            aria-hidden="true"></i>
+        </button>
       </div>
     </div>
 
     <!-- Canvas Area -->
     <div class="center-area-wrapper">
-      <div class="main-canvas">
-        <canvas id="dorian-canvas"></canvas>
-        <div class="canvas-overlay">
-          <button id="reveal-thoughts" class="custom-btn-dorian">View Dorian's Thoughts</button>
-        </div>
-      </div>
+      <canvas id="dorian-canvas"></canvas>
+      <button id="reveal-thoughts" class="custom-btn-dorian">View Dorian's Thoughts</button>
+    </div>
+    </div>
     </div>
 
     <!-- Right Column -->
@@ -161,18 +161,16 @@
   </main>
 
   <!-- Thought Log Display -->
-  <section class="thought-log-section visible">
-    <div class="thought-log-parent">
+  <section class="thought-log-section-visible">
       <video autoplay muted loop playsinline class="thought-log-video">
         <source src="cube.webm" type="video/webm" />
       </video>
       <h2 class="thought-log-title">Dorian's Recent Thoughts</h2>
       <h3 class="thought-log-subtitle">Each tick, Dorian reflects on its state. These are the most recent thoughts.</h3>
-    </div>
   </section>
 
   <!-- Live Thoughts Log -->
-  <section id="dorian-thought-log" class="thought-log-section visible">
+  <section id="dorian-thought-log" class="thought-log-section-pre">
     <div class="thought-log-parent">
       <pre id="thought-log-section" class="thought-log"></pre>
     </div>
